--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,20 @@
 <p style="color: green"><%= notice %></p>
 
 <%= render @post %>
+<h2>Comments</h2>
+<div id = "comments">
+<%= render @post.comments.reverse %>
+</div>
+<%= form_for[@post,comments.new], remote: true do |f| %>
+  <p>
+  <%= f.label :body, "New Comment" %><br/>
+  <%= f.text_area :body%>
+</p>
+<p> <%= f.submit "Add Comment"%></p>
+<% end%>
+  <div>
 
-<div>
+
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
 
